# factory_test

./: BUILD.bazel  README.md  log.h  main.cpp  vehicles_run.cpp  vehicles_run.h
vehicles/: BUILD.bazel  bicycle.cpp  bicycle.h  car.cpp  car.h  motorcycle.cpp  motorcycle.h  vehicles_base.cpp  vehicles_base.h
